<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="Emotions">Emotions</string>
    <string name="Image_saved_in_ps">Image saved in %s.</string>
    <string name="Navigate_up">Navigate up</string>
    <string name="Not_enough_space_in_device_storage_delete_some_files_and_try_again">Not enough space in device storage. Delete some files and try again.</string>
    <string name="ONLY_PICTURES_TAKEN_USING_THE_SHOT_AND_MORE_OPTIONS_IN_CAMERA_CAN_BE_EDITED_IN_THIS_STUDIO">Only pictures taken using the Shot &amp; more options in Camera can be edited in this studio.</string>
    <string name="Object_Expressme">Object</string>
    <string name="Objects">Objects</string>
    <string name="STUDIO_BODY_EDIT_YOUR_IMAGE_THEN_MOVE_THE_PART_OF_THE_IMAGE_YOU_WANT_TO_SAVE_INTO_THE_MARKED_AREA_MSG">Edit your image, then move the part of the image you want to save into the marked area. Your image will be cropped automatically, and only the marked area will be saved.</string>
    <string name="Unable_to_open_application_delete_some_files_in_device_storage_and_try_again">Unable to open application. Delete some files in device storage and try again.</string>
    <string name="__cp__KB">%d KB</string>
    <string name="__cp__camera_security_enter">Security policy restricts use of Camera</string>
    <string name="__cp__camera_unable_to_use">Unable to use camera</string>
    <string name="__cp__cannot_start_camera_msg">Unable to use Camera during calls.</string>
    <string name="__cp__cannot_start_camera_msg_during_video_call">Unable to open Camera during video calls.</string>
    <string name="__cp__flash">Flash</string>
    <string name="__cp__gallery">Gallery</string>
    <string name="__cp__message_size_limited">Message size limit reached</string>
    <string name="__cp__microphone_restrict">Security policy prevents use of microphone.</string>
    <string name="__cp__not_enough_space">Not enough memory</string>
    <string name="__cp__not_supported_zoom_toast_popup">Cannot zoom in or out in this mode.</string>
    <string name="__cp__option_auto">Auto</string>
    <string name="__cp__option_off">Off</string>
    <string name="__cp__option_on">On</string>
    <string name="__cp__pause">Pause</string>
    <string name="__cp__plugged_low_batt_msg">Unable to use flash. Battery power low.</string>
    <string name="__cp__record">Record</string>
    <string name="__cp__recording_call_rinning_msg">Recording will be stopped and saved when you answer call.</string>
    <string name="__cp__recording_disabled_by_mutliwindow">Unable to record video in Multi window view.</string>
    <string name="__cp__recording_pause">Pause</string>
    <string name="__cp__recording_resume">Resume</string>
    <string name="__cp__recording_using_earphone_mic">Recording with earphone mic</string>
    <string name="__cp__resume">Resume</string>
    <string name="__cp__shutter">Shutter</string>
    <string name="__cp__stop">Stop</string>
    <string name="__cp__switch_camera">Switch camera</string>
    <string name="__cp__temperature_too_high_change_flash_off">The flash has been turned off. You can turn on the flash when your device has cooled down.</string>
    <string name="__cp__temperature_too_high_flash_off">Unable to turn on the flash. Try again when your device has cooled down.</string>
    <string name="__cp__temperature_too_high_recording_disable">Recording has stopped. You can record when your device has cooled down.</string>
    <string name="__cp__video_reach_size_limit">Maximum recording time reached.</string>
    <string name="add">Add</string>
    <string name="add_image">Add image</string>
    <string name="add_label">Add label</string>
    <string name="add_pictures">Add pictures</string>
    <string name="add_selection">Add to selection</string>
    <string name="addpicture">Add picture</string>
    <string name="adjustment">Adjustment</string>
    <string name="adjustrgb">Adjust RGB</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_effects">Advanced FX</string>
    <string name="agi_max_limit_toast">To add new content, remove some existing items.</string>
    <string name="airbrush_face">Airbrush face</string>
    <string name="alert_dialog_cannot_move">You can move photos when zoomed in</string>
    <string name="alert_dialog_cannot_open_image">Unable to open image</string>
    <string name="alert_dialog_change_grid">Grid will be changed. Continue?</string>
    <string name="alert_dialog_change_picture">Pictures will be changed. Continue?</string>
    <string name="alert_dialog_current_area">Current area:</string>
    <string name="alert_dialog_different_resolution">Different resolution from original image</string>
    <string name="alert_dialog_dont_ask_again">Do not show again</string>
    <string name="alert_dialog_drag_effect">Effect will be applied when you drag screen</string>
    <string name="alert_dialog_enter_filename">File name empty</string>
    <string name="alert_dialog_file_name_already_exists">Same file name already exist!</string>
    <string name="alert_dialog_maximum_number_of_images">Maximum number of images (%d) reached. Delete files to make space</string>
    <string name="alert_dialog_maximum_number_of_sticker">Maximum number of stickers reached</string>
    <string name="alert_dialog_minimum_size_image">Unable to edit image. Image too small.</string>
    <string name="alert_dialog_mirror">The image on the selected side of the centre line is mirrored on the other side</string>
    <string name="alert_dialog_no_more_edits">No more edits stored in history</string>
    <string name="alert_dialog_no_region_selected">Make selection first</string>
    <string name="alert_dialog_not_enough_mem_unable_launch_app">Unable to launch application. Not enough memory.</string>
    <string name="alert_dialog_not_enough_mem_unable_save_file">Unable to save file. Memory full</string>
    <string name="alert_dialog_nothing_to_save">Save after editing image</string>
    <string name="alert_dialog_over_character">Up to %d characters available</string>
    <string name="alert_dialog_over_region_20percent">Selected area must be less than 20% of image</string>
    <string name="alert_dialog_please_wait">Please wait...</string>
    <string name="alert_dialog_redoall">All changes will be reapplied.</string>
    <string name="alert_dialog_reduce_selected_area">You selected %1$d%% of the image. Selected area must be less than %2$d%% of the image. Reduce selected area?</string>
    <string name="alert_dialog_save_as">Saved as %s</string>
    <string name="alert_dialog_save_rotation_first">First, save current rotation settings</string>
    <string name="alert_dialog_save_straighten_first">First, save current straighten settings</string>
    <string name="alert_dialog_save_success">Saved</string>
    <string name="alert_dialog_sdcard_not_available">SD card not available</string>
    <string name="alert_dialog_select_more_pictures">Select more pictures</string>
    <string name="alert_dialog_turn_on_gps_or_network">You must have either GPS or network enabled for my location to work</string>
    <string name="alert_dialog_unable_to_select_more_pictures">Unable to select more pictures</string>
    <string name="alert_dialog_undoall">All changes will be discarded.</string>
    <string name="alert_dialog_want_to_save_before_exit">Save changes before exiting?</string>
    <string name="alert_dialog_want_to_save_before_open">Save changes before opening new photo?</string>
    <string name="alert_invalid_character">Invalid character</string>
    <string name="alert_unable_to_save">Unable to save file</string>
    <string name="alert_unable_to_share">Unable to share</string>
    <string name="alert_warning">Warning</string>
    <string name="all_changes_will_be_discarded">All changes will be discarded.</string>
    <string name="all_changes_will_be_discarded_new">All changes will be discarded.</string>
    <string name="all_changes_will_be_reapplied">All changes will be reapplied.</string>
    <string name="allselection">Select all</string>
    <string name="allshare_nearby_my_device">My device</string>
    <string name="allshare_player_is_not_available">Player is not available. Check the network status and connected device.</string>
    <string name="allshare_unable_scan_device">Unable to scan for devices</string>
    <string name="allshare_unable_scan_device_while_group_play">Unable to change player while Group Play is running.</string>
    <string name="animate">Animate</string>
    <string name="app_name">Photo Editor</string>
    <string name="app_name_camera">Photo Wizard</string>
    <string name="apply">Apply</string>
    <string name="area_selected">%d%% of the image selected</string>
    <string name="artistic_filters">Artistic filters</string>
    <string name="aspectratio">AspectRatio</string>
    <string name="at_least_1_image_must_be_kept">At least 1 image must be kept.</string>
    <string name="atleast_1_image_must_be_kept">At least 1 image must be kept.</string>
    <string name="auto">Auto enhance</string>
    <string name="auto_adjust">Auto adjust</string>
    <string name="auto_shape">Auto shape</string>
    <string name="autoadjustment">Auto adjustment</string>
    <string name="backlight">Backlight</string>
    <string name="backwards">Backward</string>
    <string name="beauty">Beauty</string>
    <string name="beauty_face">Beauty face</string>
    <string name="before">Before</string>
    <string name="black_and_white">Black and white</string>
    <string name="blackandwhite">Black and white</string>
    <string name="blc">Backlight</string>
    <string name="blended_filters">Blended filters</string>
    <string name="blue">Blue</string>
    <string name="blue_tint">Blue tint</string>
    <string name="bluewash">Blue Wash</string>
    <string name="blur_bg">Blur BG</string>
    <string name="bright_face">Bright Face</string>
    <string name="brighten_face">Brighten Face</string>
    <string name="brightness">Brightness</string>
    <string name="brush">Brush</string>
    <string name="brush_selection">Brush selection</string>
    <string name="cancel">Cancel</string>
    <string name="contrast">Contrast</string>
    <string name="covers">Covers</string>
    <string name="draw">Draw</string>
    <string name="draw_eraser">Eraser</string>
    <string name="exposure">Exposure</string>
    <string name="fix_red_eye">Fix Red Eye</string>
    <string name="hue">Hue</string>
    <string name="images">Images</string>
    <string name="labels">Labels</string>
    <string name="large_eyes">Large Eyes</string>
    <string name="long_legs">Long Legs</string>
    <string name="pen">Pen</string>
    <string name="redo">Redo</string>
    <string name="saturation">Saturation</string>
    <string name="slim_face">Slim Face</string>
    <string name="soften_face">Soften Face</string>
    <string name="stickers">Stickers</string>
    <string name="undo">Undo</string>
    <string name="white_bal">White bal.</string>
</resources>