<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/action_bar_return" android:background="@drawable/actionbar_ripple_background" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/Navigate_up">
        <LinearLayout android:gravity="center" android:layout_width="48.0dip" android:layout_height="48.0dip">
            <ImageView android:layout_gravity="center" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/action_bar_title_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="17.0dip" android:textStyle="normal" android:textColor="@color/actionbar_text" android:gravity="center" android:id="@id/action_bar_cancel" android:background="@drawable/actionbar_ripple_background" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:lines="1" android:shadowColor="#cc000000" android:shadowDy="1.0" android:shadowRadius="0.3" android:layout_weight="1.0" android:fontFamily="sans-serif" />
        <TextView android:textSize="17.0dip" android:textStyle="normal" android:textColor="@color/actionbar_text" android:gravity="center" android:layout_gravity="center" android:id="@id/action_bar_done" android:background="@drawable/actionbar_ripple_background" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/apply" android:lines="1" android:shadowColor="#cc000000" android:shadowDy="1.0" android:shadowRadius="0.3" android:layout_weight="1.0" android:fontFamily="sans-serif" />
    </LinearLayout>
    <TextView android:enabled="false" android:textSize="@dimen/action_bar_text_size" android:textColor="@color/action_bar_text_color" android:gravity="center" android:id="@id/action_bar_redo" android:background="@drawable/tw_ab_ic_background" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/redo" android:singleLine="true" android:shadowColor="#cc000000" android:shadowDy="1.0" android:shadowRadius="0.3" android:layout_alignParentRight="true" />
    <TextView android:enabled="false" android:textSize="@dimen/action_bar_text_size" android:textColor="@color/action_bar_text_color" android:gravity="center" android:id="@id/action_bar_undo" android:background="@drawable/tw_ab_ic_background" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/undo" android:singleLine="true" android:shadowColor="#cc000000" android:shadowDy="1.0" android:shadowRadius="0.3" android:layout_toLeftOf="@id/action_bar_redo" />
</RelativeLayout>