<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom|center" android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/sub_btn_portrait" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/sub_btn_portrait_buttons" android:layout_width="@dimen/portrait_sub_layout_btn_width" android:layout_height="@dimen/common_bottom_button_height">
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_facebrightness" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_facebrightness_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_brighten" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/bright_face" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_soften" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_soften_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_soften" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/soften_face" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_largeeye" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_largeeye_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_largeeye" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/large_eyes" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_slimface" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_slimface_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_slimface" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/slim_face" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_outoffocus" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_outoffocus_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_outoffocus" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/blur_bg" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_slim_figure" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_slim_figure_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_slim_figure" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/long_legs" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_portrait_redeyefix" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_portrait_redeyefix_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_redeyefix" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview_portrait" android:text="@string/fix_red_eye" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>