<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center|top" android:layout_gravity="center|top" android:orientation="horizontal" android:layout_width="@dimen/penview_layout_width" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/main_button_bottom_margin" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/sub_btn_drawing_pen" android:onClick="onStateClicked" style="@style/sub_bottom_button_state_style">
        <LinearLayout android:id="@id/sub_btn_drawing_pen_background" style="@style/sub_bottom_button_background_style">
            <ImageView android:id="@id/sub_btn_drawing_pen_image" android:contentDescription="pen" style="@style/main_bottom_button_imageview_style" />
            <TextView android:id="@id/pen_textview" android:text="@string/pen" style="@style/selection_sub_button_text_style" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/sub_btn_drawing_eraser" android:onClick="onStateClicked" style="@style/sub_bottom_button_state_style">
        <LinearLayout android:id="@id/sub_btn_drawing_eraser_background" style="@style/sub_bottom_button_background_style">
            <ImageView android:id="@id/sub_btn_drawing_eraser_image" android:src="@drawable/photo_drawing_eraser" android:contentDescription="raw_eraser" style="@style/main_bottom_button_imageview_style" />
            <TextView android:id="@id/pen_textview" android:text="@string/draw_eraser" style="@style/selection_sub_button_text_style" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/sub_btn_drawing_undo" android:onClick="onStateClicked" style="@style/sub_bottom_button_state_style">
        <LinearLayout android:id="@id/sub_btn_drawing_undo_background" style="@style/sub_bottom_button_background_style">
            <ImageView android:id="@id/sub_btn_drawing_undo_image" android:src="@drawable/photo_ic_undo" android:contentDescription="undo" style="@style/main_bottom_button_imageview_style" />
            <TextView android:id="@id/pen_textview" android:text="@string/undo" style="@style/selection_sub_button_text_style" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/sub_btn_drawing_redo" android:onClick="onStateClicked" style="@style/sub_bottom_button_state_style">
        <LinearLayout android:id="@id/sub_btn_drawing_redo_background" style="@style/sub_bottom_button_background_style">
            <ImageView android:id="@id/sub_btn_drawing_redo_image" android:src="@drawable/photo_ic_redo" android:contentDescription="redo" style="@style/main_bottom_button_imageview_style" />
            <TextView android:id="@id/pen_textview" android:text="@string/redo" style="@style/selection_sub_button_text_style" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>