<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom|center" android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/sub_btn_tone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/sub_btn_tone_buttons" android:layout_width="@dimen/sub_layout_btn_width_six_button" android:layout_height="@dimen/common_bottom_button_height">
        <LinearLayout android:visibility="visible" style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_auto_enhance" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_auto_enhance_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/auto_adjust" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/auto_adjust" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_brightness" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_brightness_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:id="@id/imageView" android:src="@drawable/ic_brigtness" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/brightness" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_exposure" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_exposure_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_exposure" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:ellipsize="none" android:layout_gravity="center_horizontal" android:id="@id/sub_btn_textview" android:fadingEdge="horizontal" android:layout_width="fill_parent" android:text="@string/exposure" android:singleLine="true" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_contrast" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_contrast_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_contrast" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/contrast" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_saturation" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_saturation_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_saturation" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/saturation" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_hue" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_hue_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:id="@id/imageView2" android:src="@drawable/ic_hue" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/hue" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/main_bottom_button_weight_style">
            <LinearLayout android:id="@id/sub_btn_tone_white_balance" android:layout_width="fill_parent" android:onClick="onStateClicked" style="@style/sub_bottom_button_style">
                <LinearLayout android:id="@id/sub_btn_tone_white_balance_background" style="@style/main_bottom_button_background_style">
                    <ImageView android:src="@drawable/ic_white_balance" style="@style/main_bottom_button_imageview_style" />
                    <TextView android:id="@id/sub_btn_textview" android:text="@string/white_bal" style="@style/selection_sub_button_text_style" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>